--- a/src/blocks/card/card.scss
+++ b/src/blocks/card/card.scss
@@ -21,7 +21,8 @@ $starChar: '★';
 
 .card{
   &__image{
-    height: 132px;
+    height: 130px;
+    width: 200px;
   }
   &__item{
     padding: 30px 40.5px;
