--- a/src/template/problems-and-advantages.html
+++ b/src/template/problems-and-advantages.html
@@ -45,14 +45,14 @@
         будет cashback 10%. Кстати, кэшбек здесь без округлений (а многие банки любят этим заниматься).
       </div>
     </div>
-    <div class="flex flex-a-c flex-j-s flex-n-w offset-bottom">
+    <div class="flex flex-a-fs flex-j-s flex-n-w offset-bottom">
       <div class="bullet bullet_size_small bullet_offset_zero">2</div>
       <div class="text-small text-left-offset">
         <strong>Банкоматы.</strong> Вы можете снимать наличку в любых банкоматах (все равно какой банк).
         По всему миру. Бесплатно.
       </div>
     </div>
-    <div class="flex flex-a-c flex-j-s flex-n-w offset-bottom">
+    <div class="flex flex-a-fs flex-j-s flex-n-w offset-bottom">
       <div class="bullet bullet_size_small bullet_offset_zero">3</div>
       <div class="text-small text-left-offset">
         <strong>Доступна с 14 лет.</strong> Ну кто еще так может?
@@ -79,27 +79,28 @@
   </div>
   <!-- Empty column -->
   <div class="grid-c-1"></div>
-  <div class="grid-c-1 section">
-    <div class="grid-c-2">
-      <div class="text-sub-title text-blue text-header text-strong grid-c-2">
-        Заголовок второго уровня
-      </div>
-      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Adipisci mollitia quod minus deleniti officia rem nihil omnis
-      accusantium, a magni assumenda eum. Quas nemo numquam aliquam perspiciatis? Quisquam, deleniti dolorum!
-      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Blanditiis provident voluptas, eius dolore sapiente a ducimus
-      ut minima quaerat odit nihil! Culpa tempora libero facilis quibusdam beatae labore et quasi.
-      <h1>
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-      </h1>
-      <div class="form form_type_blue grid-c-2">
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Blanditiis provident voluptas, eius dolore sapiente a
-        ducimus ut
-        minima quaerat odit nihil! Culpa tempora libero facilis quibusdam beatae labore et quasi.
-      </div>
+  <div class="grid-c-1">
+    <div class="text-sub-title text-blue text-header text-strong grid-c-2">
+      Заголовок второго уровня
     </div>
-    <div class="grid-c-2">
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, ratione. Aperiam, sunt soluta iure quas repellendus aut illo libero assumenda nostrum maiores, ab inventore officia omnis voluptatibus ex accusantium error!
+    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Adipisci mollitia quod minus deleniti officia rem nihil omnis
+    accusantium, a magni assumenda eum. Quas nemo numquam aliquam perspiciatis? Quisquam, deleniti dolorum!
+    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Blanditiis provident voluptas, eius dolore sapiente a ducimus
+    ut minima quaerat odit nihil! Culpa tempora libero facilis quibusdam beatae labore et quasi.
+    <h1>
+      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+    </h1>
+    <div class="text-block text-block_offseted">
+      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Totam ipsam itaque error, libero laudantium non fugit ab,
+      optio
+      sunt ipsa minima corrupti reiciendis? Dignissimos sint molestiae, maxime ipsa rem optio!
     </div>
+    <div class="form form_type_blue text-block text-block_offseted grid-c-2">
+      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Blanditiis provident voluptas, eius dolore sapiente a
+      ducimus ut
+      minima quaerat odit nihil! Culpa tempora libero facilis quibusdam beatae labore et quasi.
+    </div>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, ratione. Aperiam, sunt soluta iure quas repellendus aut illo libero assumenda nostrum maiores, ab inventore officia omnis voluptatibus ex accusantium error!
   </div>
   <div class="grid-c-1">
     <div class="card-mini">
@@ -124,6 +125,189 @@
       </div>
     </div>
   </div>
+  <div class="grid-c-1">
+    <table class="table table_styled">
+      <tr class="table__row talbe__row_styled">
+        <th class="table__head table__head_styled"></th>
+        <th class="table__head table__head_styled">Физ. лицо</th>
+        <th class="table__head table__head_styled">Юр. лицо</th>
+      </tr>
+      <tr class="table__row talbe__row_styled">
+        <td class="table__column table__column_styled">Максимальная сумма</td>
+        <td class="table__column table__column_styled">80 000 руб.</td>
+        <td class="table__column table__column_styled">2 000 000 руб.</td>
+      </tr>
+      <tr class="table__row talbe__row_styled">
+        <td class="table__column table__column_styled">Максимальная срок</td>
+        <td class="table__column table__column_styled">126 дней</td>
+        <td class="table__column table__column_styled">300 дней</td>
+      </tr>
+      <tr class="table__row talbe__row_styled">
+        <td class="table__column table__column_styled">Время получения денег</td>
+        <td class="table__column table__column_styled">Моментально</td>
+        <td class="table__column table__column_styled">1-2 дня</td>
+      </tr>
+      <tr class="table__row talbe__row_styled">
+        <td class="table__column table__column_styled">Способы получения</td>
+        <td class="table__column table__column_styled">
+          Банковская карта <br />
+          Банковский счет <br />
+          Яндекс.Деньги <br />
+          QIWI <br />
+          Элекеснет
+        </td>
+        <td class="table__column table__column_styled">
+          Расчетный счет <br />
+          Яндекс.Деньги <br />
+          QIWI <br />
+          Элекеснет
+        </td>
+      </tr>
+      <tr class="table__row talbe__row_styled">
+        <td class="table__column table__column_styled">Кредитная история</td>
+        <td class="table__column table__column_styled">Любая</td>
+        <td class="table__column table__column_styled">Хорошая</td>
+      </tr>
+    </table>
+  </div>
+  <!-- Empty column -->
+  <div class="gird-c-1"></div>
+  <div class="grid-c-1">
+    <div class="text-sub-title text-sub-title_lvl_3 text-blue text-header text-header_lvl_3 text-header_offset-top_zero text-strong grid-c-2">
+      Заголовок второго уровня
+    </div>
+    <div class="text-block_offseted">
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas consequuntur doloremque praesentium veniam repellendus
+      ab, ullam beatae doloribus, eos nostrum animi ratione eum at reprehenderit fugiat ipsam laborum, incidunt tempora?
+    </div>
+    <div class="long__item star-5 flex hover border border-radius">
+      <img class="long__image" src="img/bistro-dengi.png" alt="Тинькофф">
+      <div class="long__itemChild">
+        <div class="long__text-1 text__underline">
+          Быстроденьги
+        </div>
+        <div class="grid-50-50 flex-j-s">
+          <div class="grid-c-1">
+            <div class="long__text-2">Срок займа</div>
+            <div class="long__text-3 strong">до 40 дней</div>
+          </div>
+          <div class="grid-c-1">
+            <div class="long__text-2">Ставка</div>
+            <div class="long__text-3 strong"></div>
+          </div>
+          <div class="grid-c-1">
+            <div class="long__text-2">Ставка</div>
+            <div class="long__text-3 strong">от 10,9%</div>
+          </div>
+          <div class="grid-c-1">
+            <div class="long__text-2">Ставка</div>
+            <div class="long__text-3 strong">от 10,9%</div>
+          </div>
+        </div>
+      </div>
+      <div class="long__location-2 text-center">
+        <button class="long__button">Оформить кредит</button>
+        <a href="#" class="long__more">Подробнеее</a>
+      </div>
+    </div>
+  </div>
+  <!-- Empty column -->
+  <div class="grid-c-1"></div>
+  <div class="grid-c-1">
+    <div class="text-block_offset_bottom">
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas consequuntur doloremque praesentium veniam repellendus
+      ab, ullam beatae doloribus, eos nostrum animi ratione eum at reprehenderit fugiat ipsam laborum, incidunt tempora?
+    </div>
+    <div class="flex flex-a-fs flex-j-s flex-n-w offset-bottom">
+      <div class="bullet bullet_size_smallest"></div>
+      <div class="text-small text-left-offset">
+        <strong>Кэшбек.</strong> Здесь он начисляется в виде рокетрублей (по сути обычные рубли).
+        Ежемесячно банк показывает 5 категорий, из которых вы можете выбрать 3, по которым у вас
+        будет cashback 10%. Кстати, кэшбек здесь без округлений (а многие банки любят этим заниматься).
+      </div>
+    </div>
+    <div class="flex flex-a-fs flex-j-s flex-n-w offset-bottom">
+      <div class="bullet bullet_size_smallest bullet_offset_zero"></div>
+      <div class="text-small text-left-offset">
+        <strong>Банкоматы.</strong> Вы можете снимать наличку в любых банкоматах (все равно какой банк).
+        По всему миру. Бесплатно.
+      </div>
+    </div>
+    <div class="flex flex-a-fs flex-j-s flex-n-w offset-bottom">
+      <div class="bullet bullet_size_smallest bullet_offset_zero"></div>
+      <div class="text-small text-left-offset">
+        <strong>Доступна с 14 лет.</strong> Ну кто еще так может?
+      </div>
+    </div>
+    <div class="flex flex-a-fs flex-j-s flex-n-w offset-bottom">
+      <div class="bullet bullet_size_smallest"></div>
+      <div class="text-small text-left-offset">
+        <strong>Игровой режим.</strong> Это такой повышенный кешбек для геймеров. Если вы пользуетесь
+        PlayStation Store, Steam, Fortnite, Xbox, GOG.com, War Thunder, League Of Legends, Battle.net,
+        Wargaming.net, EVE Online и Origin, то будете получать от 7 до 10% cashback во время распродаж
+        в данных играх/сервисах.
+      </div>
+    </div>
+  </div>
+  <!-- Empty column -->
+  <div class="grid-c-1"></div>
+  <div class="grid-c-1">
+    <div class="paginator">
+      <div class="paginator__tabs">
+        <div class="paginator__tab paginator__tab_active">Шаг 1</div>
+        <div class="paginator__tab">Шаг 2</div>
+        <div class="paginator__tab">Шаг 3</div>
+        <div class="paginator__tab">Шаг 4</div>
+        <div class="paginator__tab">Шаг 5</div>
+      </div>
+      <div class="paginator__content">
+        <img src="img/turbozaim.png" alt="turbozaim" class="full-width">
+      </div>
+      <a class="paginator__prev" href="#">‹</a>
+      <a class="paginator__next" href="#">›</a>
+    </div>
+  </div>
+  <!-- Empty column -->
+  <div class="grid-c-1"></div>
+  <div class="grid-c-1">
+    <div class="text-sub-title text-blue text-header text-strong">
+      F.A.Q.
+    </div>
+    <div class="accordeon">
+      <div class="accordeon__item accordeon__item_active">
+        <div class="accordeon__title">Lorem Ipsum?</div>
+        <div class="accordeon__content">
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sed, rerum error placeat ut quibusdam id asperiores commodi tempora labore adipisci laudantium temporibus aperiam officia exercitationem. Ducimus commodi eveniet ratione corrupti?
+        </div>
+      </div>
+      <div class="accordeon__item">
+        <div class="accordeon__title">Lorem Ipsum?</div>
+        <div class="accordeon__content">
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sed, rerum error placeat ut quibusdam id asperiores
+          commodi tempora labore adipisci laudantium temporibus aperiam officia exercitationem. Ducimus commodi eveniet
+          ratione corrupti?
+        </div>
+      </div>
+      <div class="accordeon__item">
+        <div class="accordeon__title">Lorem Ipsum?</div>
+        <div class="accordeon__content">
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sed, rerum error placeat ut quibusdam id asperiores
+          commodi tempora labore adipisci laudantium temporibus aperiam officia exercitationem. Ducimus commodi eveniet
+          ratione corrupti?
+        </div>
+      </div>
+      <div class="accordeon__item">
+        <div class="accordeon__title">Lorem Ipsum?</div>
+        <div class="accordeon__content">
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sed, rerum error placeat ut quibusdam id asperiores
+          commodi tempora labore adipisci laudantium temporibus aperiam officia exercitationem. Ducimus commodi eveniet
+          ratione corrupti?
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- Empty column -->
+  <div class="grid-c-1"></div>
   <div class="grid-c-1">
     <div class="text-sub-title text-blue text-header text-strong">
       12 отзывов
@@ -187,3 +371,4 @@
     <button class="button button_type_gray button_size_full button_offset-bottom_much">Показать больше отзывов</button>
   </div>
 </div>
+<script src="js/main.js"></script>
