--- a/src/template/problems-and-advantages.html
+++ b/src/template/problems-and-advantages.html
@@ -13,33 +13,35 @@
       <div class="bad-part">Для получения займа на карту, QIWI или Яндекс.Денеги требуется сделать фото с надписью "Заявка на займ еКапуста" (для подтверждения личности)</div>
       <div class="bad-part">Нет бесплатного телефона горячей линии</div>
     </div>
-    <img src="img/turbozaim.png" alt="" class="grid-c-2 full-width">
-    <div class="text-small text-gray grid-c-2 problems-and-advatages__image-desc">
+    <div class="grid-c-2">
+      <img src="img/card1.jpg" alt="Card 1" class="full-width">
+      <div class="text-small text-gray grid-c-2 problems-and-advatages__image-desc">
+        Наверняка многие слышали про Рокетбанк — онлайн-банк без каких-либо отделений. И про его лучший продукт — дебетовку
+        Рокет. Дебетовая карта позиционируется как стильная и молодежная с очень крутыми условиями.
+      </div>
+    </div>
+  </div>
+    <!-- Empty column -->
+  <div class="grid-c-1"></div>
+  <div class="grid-c-1 text-block_offset_top">
+    <strong>
       Наверняка многие слышали про Рокетбанк — онлайн-банк без каких-либо отделений. И про его лучший продукт — дебетовку
       Рокет. Дебетовая карта позиционируется как стильная и молодежная с очень крутыми условиями.
-    </div>
+      <br /><br />
+      Но почему нужно оформить именно ее? Ну, она бесплатная. И приносит доход. Причем неважно сколько у вас денег на балансе,
+      100 или 5 000 000 рублей. <span class="marked">Вы в любом случае будете получать свои 5,5% на остаток.</span> Даже вклады
+      не у всех банков настолько выгодны:
+    </strong>
   </div>
-    <!-- For skip one column -->
-  <div class="grid-c-1"></div>
-  <!-- For start offset -->
-  <div class="grid-c-2"></div>
-  <div class="grid-c-1">
-    Наверняка многие слышали про Рокетбанк — онлайн-банк без каких-либо отделений. И про его лучший продукт — дебетовку
-    Рокет. Дебетовая карта позиционируется как стильная и молодежная с очень крутыми условиями.
-    <br /><br />
-    Но почему нужно оформить именно ее? Ну, она бесплатная. И приносит доход. Причем неважно сколько у вас денег на балансе,
-    100 или 5 000 000 рублей. <span class="marked">Вы в любом случае будете получать свои 5,5% на остаток.</span> Даже вклады
-    не у всех банков настолько выгодны:
-  </div>
-  <div class="grid-c-1">
+  <div class="grid-c-1 text-block_offset_top">
     <div class="form">
-      <em>Все данные "Северсталь"</em> публикует в <a href="#" class="link">пресс-релизах на официальном сайте</a>
+      <strong><em>Все данные "Северсталь"</em></strong> публикует в <a href="#" class="link">пресс-релизах на официальном сайте</a>
     </div>
   </div>
   <div class="grid-c-1">
-    <div class="flex flex-a-fs flex-j-s flex-n-w">
+    <div class="flex flex-a-fs flex-j-s flex-n-w offset-bottom">
       <div class="bullet bullet_size_small">1</div>
-      <div class="text-small text-left-offset">
+      <div class="text-block text-block_offset_left text-block_lined">
         <strong>Кэшбек.</strong> Здесь он начисляется в виде рокетрублей (по сути обычные рубли).
         Ежемесячно банк показывает 5 категорий, из которых вы можете выбрать 3, по которым у вас
         будет cashback 10%. Кстати, кэшбек здесь без округлений (а многие банки любят этим заниматься).
@@ -47,20 +49,20 @@
     </div>
     <div class="flex flex-a-fs flex-j-s flex-n-w offset-bottom">
       <div class="bullet bullet_size_small bullet_offset_zero">2</div>
-      <div class="text-small text-left-offset">
+      <div class="text-block text-block_offset_left text-block_lined">
         <strong>Банкоматы.</strong> Вы можете снимать наличку в любых банкоматах (все равно какой банк).
         По всему миру. Бесплатно.
       </div>
     </div>
     <div class="flex flex-a-fs flex-j-s flex-n-w offset-bottom">
       <div class="bullet bullet_size_small bullet_offset_zero">3</div>
-      <div class="text-small text-left-offset">
+      <div class="text-block text-block_offset_left text-block_lined">
         <strong>Доступна с 14 лет.</strong> Ну кто еще так может?
       </div>
     </div>
     <div class="flex flex-a-fs flex-j-s flex-n-w">
       <div class="bullet bullet_size_small">4</div>
-      <div class="text-small text-left-offset">
+      <div class="text-block text-block_offset_left text-block_lined">
         <strong>Игровой режим.</strong> Это такой повышенный кешбек для геймеров. Если вы пользуетесь
         PlayStation Store, Steam, Fortnite, Xbox, GOG.com, War Thunder, League Of Legends, Battle.net,
         Wargaming.net, EVE Online и Origin, то будете получать от 7 до 10% cashback во время распродаж
@@ -80,52 +82,37 @@
   <!-- Empty column -->
   <div class="grid-c-1"></div>
   <div class="grid-c-1">
-    <div class="text-sub-title text-blue text-header text-strong grid-c-2">
+    <div class="text-blue text-header text-header_offset_small text-header_lvl_2">
       Заголовок второго уровня
     </div>
-    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Adipisci mollitia quod minus deleniti officia rem nihil omnis
-    accusantium, a magni assumenda eum. Quas nemo numquam aliquam perspiciatis? Quisquam, deleniti dolorum!
-    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Blanditiis provident voluptas, eius dolore sapiente a ducimus
-    ut minima quaerat odit nihil! Culpa tempora libero facilis quibusdam beatae labore et quasi.
-    <h1>
-      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-    </h1>
-    <div class="text-block text-block_offseted">
-      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Totam ipsam itaque error, libero laudantium non fugit ab,
-      optio
-      sunt ipsa minima corrupti reiciendis? Dignissimos sint molestiae, maxime ipsa rem optio!
+    <span class="text-block text-block_lined">
+      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Adipisci mollitia quod minus deleniti officia rem nihil omnis
+      accusantium, a magni assumenda eum. Quas nemo numquam aliquam perspiciatis? Quisquam, deleniti dolorum!
+      Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+    </span>
+    <div class="text-header text-header_lvl_1">
+      Но почему нужно оформить именно ее? <br />
+      Ну, она бесплатная. И приносит доход.
     </div>
-    <div class="form form_type_blue text-block text-block_offseted grid-c-2">
+    <div class="text-block text-block_offseted text-block_lined">
+      Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+      Totam ipsam itaque error, libero laudantium non fugit ab, optio sunt ipsa minima corrupti reiciendis?
+      Dignissimos sint molestiae, maxime ipsa rem optio!
+      Dignissimos sint molestiae, maxime ipsa rem optio!
+      Dignissimos sint molestiae, maxime ipsa rem optio!
+    </div>
+    <div class="form form_type_blue text-block text-block_offseted grid-c-2 text-strong">
       Lorem ipsum, dolor sit amet consectetur adipisicing elit. Blanditiis provident voluptas, eius dolore sapiente a
       ducimus ut
       minima quaerat odit nihil! Culpa tempora libero facilis quibusdam beatae labore et quasi.
     </div>
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, ratione. Aperiam, sunt soluta iure quas repellendus aut illo libero assumenda nostrum maiores, ab inventore officia omnis voluptatibus ex accusantium error!
-  </div>
-  <div class="grid-c-1">
-    <div class="card-mini">
-      <div class="card-mini__stars card-mini__stars">
-        <div class="star-modified-4"></div>
-      </div>
-      <img src="img/lime-zaim-mini.png" alt="Lime займы" class="card-mini__image">
-      <div class="flex flex-d-c">
-        <div class="card-mini__location-1">
-          <div class="long__text-2">Срок займа</div>
-          <div class="long__text-3 strong">36 месяцев</div>
-        </div>
-        <div class="card-mini__location-1">
-          <div class="long__text-2">Сумма займа</div>
-          <div class="long__text-3 strong">до 1 500 000 руб.</div>
-        </div>
-        <div class="card-mini__location-1">
-          <div class="long__text-2">Процентная ставка</div>
-          <div class="long__text-3 strong">от 13,5%</div>
-        </div>
-        <button class="button button_size_full">Оформить займ</button>
-      </div>
+    <div class="text-block text-block_lined">
+      Dignissimos sint molestiae, maxime ipsa rem optio!
+      Dignissimos sint molestiae, maxime ipsa rem optio!
+      Dignissimos sint molestiae, maxime ipsa rem optio!
+      Dignissimos sint molestiae, maxime ipsa rem optio!
+      Dignissimos sint molestiae, maxime ipsa rem optio!
     </div>
-  </div>
-  <div class="grid-c-1">
     <table class="table table_styled">
       <tr class="table__row talbe__row_styled">
         <th class="table__head table__head_styled"></th>
@@ -169,17 +156,38 @@
         <td class="table__column table__column_styled">Хорошая</td>
       </tr>
     </table>
-  </div>
-  <!-- Empty column -->
-  <div class="gird-c-1"></div>
-  <div class="grid-c-1">
-    <div class="text-sub-title text-sub-title_lvl_3 text-blue text-header text-header_lvl_3 text-header_offset-top_zero text-strong grid-c-2">
-      Заголовок второго уровня
+    <div class="text-blue text-header text-header_lvl_3 grid-c-2">
+      Заголовок третьего уровня
     </div>
     <div class="text-block_offseted">
       Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas consequuntur doloremque praesentium veniam repellendus
       ab, ullam beatae doloribus, eos nostrum animi ratione eum at reprehenderit fugiat ipsam laborum, incidunt tempora?
     </div>
+  </div>
+  <div class="grid-c-1">
+    <div class="card-mini">
+      <div class="card-mini__stars card-mini__stars">
+        <div class="star-modified-4"></div>
+      </div>
+      <img src="img/lime-zaim-mini.png" alt="Lime займы" class="card-mini__image">
+      <div class="flex flex-d-c">
+        <div class="card-mini__location-1">
+          <div class="long__text-2">Срок займа</div>
+          <div class="long__text-3 strong">36 месяцев</div>
+        </div>
+        <div class="card-mini__location-1">
+          <div class="long__text-2">Сумма займа</div>
+          <div class="long__text-3 strong">до 1 500 000 руб.</div>
+        </div>
+        <div class="card-mini__location-1">
+          <div class="long__text-2">Процентная ставка</div>
+          <div class="long__text-3 strong">от 13,5%</div>
+        </div>
+        <button class="button button_size_full">Оформить займ</button>
+      </div>
+    </div>
+  </div>
+  <div class="grid-c-1">
     <div class="long__item star-5 flex hover border border-radius">
       <img class="long__image" src="img/bistro-dengi.png" alt="Тинькофф">
       <div class="long__itemChild">
@@ -217,40 +225,50 @@
     <div class="text-block_offset_bottom">
       Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas consequuntur doloremque praesentium veniam repellendus
       ab, ullam beatae doloribus, eos nostrum animi ratione eum at reprehenderit fugiat ipsam laborum, incidunt tempora?
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas consequuntur doloremque praesentium veniam repellendus
+      ab, ullam beatae doloribus, eos nostrum animi ratione eum at reprehenderit fugiat ipsam laborum, incidunt tempora?
     </div>
-    <div class="flex flex-a-fs flex-j-s flex-n-w offset-bottom">
-      <div class="bullet bullet_size_smallest"></div>
-      <div class="text-small text-left-offset">
-        <strong>Кэшбек.</strong> Здесь он начисляется в виде рокетрублей (по сути обычные рубли).
-        Ежемесячно банк показывает 5 категорий, из которых вы можете выбрать 3, по которым у вас
-        будет cashback 10%. Кстати, кэшбек здесь без округлений (а многие банки любят этим заниматься).
+    <div class="text-block text-block_offseted text-block_lined">
+      <div class="flex flex-a-fs flex-j-s flex-n-w offset-bottom">
+        <div class="bullet bullet_size_smallest"></div>
+        <div class="offset-left">
+          <strong>Кэшбек.</strong> Здесь он начисляется в виде рокетрублей (по сути обычные рубли).
+          Ежемесячно банк показывает 5 категорий, из которых вы можете выбрать 3, по которым у вас
+          будет cashback 10%. Кстати, кэшбек здесь без округлений (а многие банки любят этим заниматься).
+        </div>
       </div>
-    </div>
-    <div class="flex flex-a-fs flex-j-s flex-n-w offset-bottom">
-      <div class="bullet bullet_size_smallest bullet_offset_zero"></div>
-      <div class="text-small text-left-offset">
-        <strong>Банкоматы.</strong> Вы можете снимать наличку в любых банкоматах (все равно какой банк).
-        По всему миру. Бесплатно.
+      <div class="flex flex-a-fs flex-j-s flex-n-w offset-bottom">
+        <div class="bullet bullet_size_smallest bullet_offset_zero"></div>
+        <div class="offset-left">
+          <strong>Банкоматы.</strong> Вы можете снимать наличку в любых банкоматах (все равно какой банк).
+          По всему миру. Бесплатно.
+        </div>
       </div>
-    </div>
-    <div class="flex flex-a-fs flex-j-s flex-n-w offset-bottom">
-      <div class="bullet bullet_size_smallest bullet_offset_zero"></div>
-      <div class="text-small text-left-offset">
-        <strong>Доступна с 14 лет.</strong> Ну кто еще так может?
+      <div class="flex flex-a-fs flex-j-s flex-n-w offset-bottom">
+        <div class="bullet bullet_size_smallest bullet_offset_zero"></div>
+        <div class="offset-left">
+          <strong>Доступна с 14 лет.</strong> Ну кто еще так может?
+        </div>
       </div>
-    </div>
-    <div class="flex flex-a-fs flex-j-s flex-n-w offset-bottom">
-      <div class="bullet bullet_size_smallest"></div>
-      <div class="text-small text-left-offset">
-        <strong>Игровой режим.</strong> Это такой повышенный кешбек для геймеров. Если вы пользуетесь
-        PlayStation Store, Steam, Fortnite, Xbox, GOG.com, War Thunder, League Of Legends, Battle.net,
-        Wargaming.net, EVE Online и Origin, то будете получать от 7 до 10% cashback во время распродаж
-        в данных играх/сервисах.
+      <div class="flex flex-a-fs flex-j-s flex-n-w offset-bottom">
+        <div class="bullet bullet_size_smallest"></div>
+        <div class="offset-left">
+          <strong>Игровой режим.</strong> Это такой повышенный кешбек для геймеров. Если вы пользуетесь
+          PlayStation Store, Steam, Fortnite, Xbox, GOG.com, War Thunder, League Of Legends, Battle.net,
+          Wargaming.net, EVE Online и Origin, то будете получать от 7 до 10% cashback во время распродаж
+          в данных играх/сервисах.
+        </div>
       </div>
     </div>
   </div>
-  <!-- Empty column -->
-  <div class="grid-c-1"></div>
+  <div class="grid-c-1 text-gray">
+    <img src="img/question.png" alt="Question">
+    <br />
+    <em>
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Enim reiciendis dolorem laudantium, inventore illum sequi
+      facilis dolor possimus sit corporis doloremque repellendus placeat esse. Nulla magnam debitis aspernatur totam alias!
+    </em>
+  </div>
   <div class="grid-c-1">
     <div class="paginator">
       <div class="paginator__tabs">
@@ -261,7 +279,7 @@
         <div class="paginator__tab">Шаг 5</div>
       </div>
       <div class="paginator__content">
-        <img src="img/turbozaim.png" alt="turbozaim" class="full-width">
+        <img src="img/card2.jpg" alt="Second card" class="full-width">
       </div>
       <a class="paginator__prev" href="#">‹</a>
       <a class="paginator__next" href="#">›</a>
@@ -270,7 +288,7 @@
   <!-- Empty column -->
   <div class="grid-c-1"></div>
   <div class="grid-c-1">
-    <div class="text-sub-title text-blue text-header text-strong">
+    <div class="text-blue text-header text-header_offset_small text-strong">
       F.A.Q.
     </div>
     <div class="accordeon">
@@ -308,9 +326,15 @@
   </div>
   <!-- Empty column -->
   <div class="grid-c-1"></div>
+  <div class="grid-c-2 relative">
+    <div class="full-hr"></div>
+  </div>
   <div class="grid-c-1">
-    <div class="text-sub-title text-blue text-header text-strong">
+    <div class="text-sub-title text-blue text-header text-header_offset_small text-strong flex flex-j-sb">
       12 отзывов
+      <button class="button button_offset_none">
+        Оставьте свой отзыв
+      </button>
     </div>
     <article class="comment flex flex-j-sb flex-d-c form">
       <header class="comment__header flex full-width flex-j-sb flex-n-w">
@@ -369,6 +393,58 @@
       </main>
     </article>
     <button class="button button_type_gray button_size_full button_offset-bottom_much">Показать больше отзывов</button>
+  </div>
+  <div class="grid-c-1">
+    <div class="flex flex-g-1 comments__cards">
+      <div class="cards-mini">
+        <div class="text-transparent text-header text-header_offset-bottom_zero text-strong">
+          Еще варианты
+        </div>
+        <div class="card-mini">
+          <div class="card-mini__stars card-mini__stars_special">
+            <div class="card-mini__special-label">Спецпредложение</div>
+            <div class="star-modified-5 star-modified-5_special"></div>
+          </div>
+          <img src="img/Green-Money-mini.png" alt="Green Money" class="card-mini__image">
+          <div class="flex flex-d-c">
+            <div class="card-mini__location-1">
+              <div class="long__text-2">Срок займа</div>
+              <div class="long__text-3 strong">36 месяцев</div>
+            </div>
+            <div class="card-mini__location-1">
+              <div class="long__text-2">Сумма займа</div>
+              <div class="long__text-3 strong">до 1 500 000 руб.</div>
+            </div>
+            <div class="card-mini__location-1">
+              <div class="long__text-2">Процентная ставка</div>
+              <div class="long__text-3 strong">от 13,5%</div>
+            </div>
+            <button class="button button_size_full">Оформить займ</button>
+          </div>
+        </div>
+        <div class="card-mini">
+          <div class="card-mini__stars card-mini__stars">
+            <div class="star-modified-3"></div>
+          </div>
+          <img src="img/bistro-dengi-mini.png" alt="Быстро деньги" class="card-mini__image">
+          <div class="flex flex-d-c">
+            <div class="card-mini__location-1">
+              <div class="long__text-2">Срок займа</div>
+              <div class="long__text-3 strong">36 месяцев</div>
+            </div>
+            <div class="card-mini__location-1">
+              <div class="long__text-2">Сумма займа</div>
+              <div class="long__text-3 strong">до 1 500 000 руб.</div>
+            </div>
+            <div class="card-mini__location-1">
+              <div class="long__text-2">Процентная ставка</div>
+              <div class="long__text-3 strong">от 13,5%</div>
+            </div>
+            <button class="button button_size_full">Оформить займ</button>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
 <script src="js/main.js"></script>
