--- a/src/blocks/problems-and-advatages/problems-and-advatages.scss
+++ b/src/blocks/problems-and-advatages/problems-and-advatages.scss
@@ -46,7 +46,7 @@ $color-border-gray: #dddddd;
 }
 .problems-and-advatages{
   &__image-desc{
-    padding: 0 0 20px;
+    padding: 20px 0;
     border-bottom: 1px solid $color-border-gray;
   }
 }
