--- a/src/template/sortTab.html
+++ b/src/template/sortTab.html
@@ -7,7 +7,7 @@
         <div class="sortTab__item border_top border_left border_bottom hover">Пенсионерам</div>
         <div class="sortTab__item border_top border_left border_bottom hover">от 30 000 руб.</div>
         <div class="sortTab__item border_top border_left border_bottom hover">На банковский счет</div>
-        <div class="sortTab__item border_top border_left border_bottom border_right border_t-r-r-10 border_b-r-r-10 hover">На карту</div>
+        <div class="sortTab__item border_top border_left border_bottom border_right border_t-r-r-10 border_b-rgit -r-10 hover">На карту</div>
         <div class="sortTab__item border_left border_bottom hover border_b-l-r-10">В день обращения</div>
         <div class="sortTab__item border_left border_bottom hover">С низким процентом</div>
         <div class="sortTab__item border_left border_bottom hover">от 50 000руб.</div>
