--- a/src/blocks/_common/_common.scss
+++ b/src/blocks/_common/_common.scss
@@ -19,6 +19,7 @@ $starChar: '★';
 body{
   margin:0!important;
   font-family: 'IBM Plex Sans', sans-serif;
+  overflow-x: hidden;
 }
 ul{
   margin: 0;
