--- a/src/template/problems-and-advantages.html
+++ b/src/template/problems-and-advantages.html
@@ -35,7 +35,7 @@
   </div>
   <div class="grid-c-1 text-block_offset_top">
     <div class="form">
-      <strong><em>Все данные "Северсталь"</em></strong> публикует в <a href="#" class="link">пресс-релизах на официальном сайте</a>
+      <strong><em>Все данные "Северсталь" публикует в <a href="#" class="link">пресс-релизах на официальном сайте</a></em></strong>
     </div>
   </div>
   <div class="grid-c-1">
